<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="right|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitSeven"
            android:text="@string/_7"
            tools:ignore="UsingOnClickInXml"
            app:cornerRadius = "0dp"
            android:backgroundTint="@color/grey"
            />

        <Button
            android:id="@+id/btnEight"
            android:backgroundTint="@color/grey"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigitEight"
            android:layout_weight="1"
            android:text="@string/_8"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnNine"
            android:backgroundTint="@color/grey"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onDigitNine"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDivide"
            android:backgroundTint="@color/grey"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:layout_weight="1"
            android:onClick="onDigitFour"
            android:text="@string/_4"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:layout_height="match_parent"
            android:onClick="onDigitFive"
            android:layout_weight="1"
            android:text="@string/_5"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitSix"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Multiply"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitOne"
            android:text="@string/_1"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:onClick="onDigitTwo"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="2"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onDigitThree"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:backgroundTint="@color/grey"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSubtract"
            android:backgroundTint="@color/grey"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Subtract"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDecimalPoint"
            android:text="@string/Dot"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitZero"
            android:text="@string/_0"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:backgroundTint="@color/grey"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:backgroundTint="@color/grey"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            app:cornerRadius = "0dp"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>

</LinearLayout>